// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Bold 1`] = `
Object {
  "ended": true,
  "items": Array [
    "test",
  ],
  "type": "Bold",
}
`;

exports[`Parser Bold 2`] = `
Object {
  "ended": true,
  "items": Array [
    " test * \\\\ ",
    Object {
      "ended": true,
      "items": Array [
        "and*",
      ],
      "type": "Italic",
    },
    " so on",
  ],
  "type": "Bold",
}
`;

exports[`Parser Document 1`] = `
Object {
  "ended": true,
  "items": Array [
    Object {
      "ended": true,
      "items": Array [
        "
# Header",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "ended": true,
      "items": Array [
        "
block
# so not a header",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "ended": true,
      "items": Array [
        "
",
        Object {
          "ended": true,
          "items": Array [
            " test
",
          ],
          "type": "Bold",
        },
        " test",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "ended": true,
      "items": Array [
        "
Paragraph and something else. sentence
test ",
        Object {
          "ended": true,
          "items": Array [
            "bold",
          ],
          "type": "Bold",
        },
        " ",
        Object {
          "ended": true,
          "items": Array [
            "italic",
          ],
          "type": "Italic",
        },
        " ",
        Object {
          "ended": true,
          "items": Array [
            Object {
              "ended": true,
              "items": Array [
                "bold italic",
              ],
              "type": "Bold",
            },
          ],
          "type": "Italic",
        },
        " ",
        Object {
          "ended": true,
          "items": Array [
            "code",
          ],
          "type": "Mono",
        },
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "ended": true,
      "items": Array [
        "
",
        Object {
          "ended": true,
          "items": Array [],
          "type": "Mono",
        },
        Object {
          "ended": true,
          "items": Array [
            "js
 code block
",
          ],
          "type": "Mono",
        },
        Object {
          "ended": true,
          "items": Array [],
          "type": "Mono",
        },
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "ended": true,
      "items": Array [
        "
> some blockquote
> quote",
      ],
      "type": "Paragraph",
    },
    "
",
    Object {
      "ended": true,
      "items": Array [
        "
One more paragraph.",
      ],
      "type": "Paragraph",
    },
    "

",
  ],
  "type": "Document",
}
`;

exports[`Parser Header 1`] = `
Object {
  "ended": true,
  "items": Array [
    " AHAHAH *test oh no* !",
  ],
  "type": "Header",
}
`;

exports[`Parser Italic 1`] = `
Object {
  "ended": true,
  "items": Array [
    "test",
  ],
  "type": "Italic",
}
`;

exports[`Parser Italic 2`] = `
Object {
  "ended": true,
  "items": Array [
    " test _ and so on ",
    Object {
      "ended": true,
      "items": Array [
        "_test",
      ],
      "type": "Bold",
    },
  ],
  "type": "Italic",
}
`;

exports[`Parser Mono 1`] = `
Object {
  "ended": true,
  "items": Array [
    "test",
  ],
  "type": "Mono",
}
`;

exports[`Parser Mono 2`] = `
Object {
  "ended": false,
  "items": Array [
    " test \` \\\\ _and*_ so on*",
  ],
  "type": "Mono",
}
`;

exports[`Parser Paragraph 1`] = `
Object {
  "ended": true,
  "items": Array [
    "
      AHAHAH ",
    Object {
      "ended": true,
      "items": Array [
        "test oh no",
      ],
      "type": "Bold",
    },
    " !
      go go ",
    Object {
      "ended": true,
      "items": Array [
        "power cows",
      ],
      "type": "Italic",
    },
    " ",
    Object {
      "ended": true,
      "items": Array [
        "code",
      ],
      "type": "Mono",
    },
    "
      ",
  ],
  "type": "Paragraph",
}
`;
